Moved attribution where it wouldn't "break" plasma dialog

--- a/metadata.desktop
+++ b/metadata.desktop
@@ -10,7 +10,7 @@ ServiceTypes=Plasma/Applet
 Icon=clock
 X-Plasma-API=python
 X-Plasma-MainScript=code/main.py
-X-KDE-PluginInfo-Author=Daniele "OpenNingia" Simonetti (modded by Federico Rampazzo)
+X-KDE-PluginInfo-Author=Daniele "OpenNingia" Simonetti
 X-KDE-PluginInfo-Email=oppifjellet@gmail.com
 X-KDE-PluginInfo-Name=plasma-qlock
 X-KDE-PluginInfo-Version=1.6
