- added german matrix and hours - added minutes represented by 4 dots in the corners - german text changes every 5 minutes - default settings changed to german and black background - changed color for normal pen to darker grey tone for better differentiation

--- a/metadata.desktop
+++ b/metadata.desktop
@@ -5,12 +5,14 @@ Name[it]=Orologio Scritto
 Name[it_IT]=Orologio Scritto
 Name[en]=Words Clock
 Name[en_US]=Words Clock
+Name[de]=Umgangssprachliche Uhr im Stil der QlockTwo
+Name[de_DE]=Umgangssprachliche Uhr im Stil der QlockTwo
 Type=Service
 ServiceTypes=Plasma/Applet
 Icon=clock
 X-Plasma-API=python
 X-Plasma-MainScript=code/main.py
-X-KDE-PluginInfo-Author=Daniele "OpenNingia" Simonetti
+X-KDE-PluginInfo-Author=Daniele "OpenNingia" Simonetti, Dennis Kadioglu
 X-KDE-PluginInfo-Email=oppifjellet@gmail.com
 X-KDE-PluginInfo-Name=plasma-qlock
 X-KDE-PluginInfo-Version=1.7
